@@ -5,7 +5,8 @@ Save/Load composer fields in audio projects
 Save/Load default DVD Copy reading device
 Fixed cdrecord output parsing on Debian
 Backported the audio project beautification
-	
+Added checks for all TEAC R5XS compatible (and thus non-MMC) writers
+
 0.11.9
 Fixed data project size calculation (for good this time).
 	
